--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "electron .",
     "dev": "electron . --dev",
     "build": "electron-builder",
-    "build-linux": "electron-builder --linux",
+    "build-linux": "electron-builder --linux deb",
+    "build-deb": "electron-builder --linux deb",
+    "build-appimage": "electron-builder --linux AppImage",
     "build-windows": "electron-builder --windows",
     "build-mac": "electron-builder --mac",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [
     "electron",
@@ -20,29 +23,58 @@
     "poe",
     "openwebui"
   ],
-  "author": "Tu Nombre",
+  "author": {
+    "name": "JSuarez",
+    "email": "jsuarez@mediaserver.com.co"
+  },
   "license": "MIT",
   "devDependencies": {
     "electron": "^28.0.0",
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.13.3"
   },
   "build": {
-    "appId": "com.poe.desktop",
-    "productName": "Poe Desktop",
+    "appId": "co.mediaserver.openwebui",
+    "productName": "OpenWeb UI",
     "directories": {
       "output": "dist"
     },
     "files": [
       "main.js",
-      "renderer.js",
-      "styles.css",
+      "preload.js",
+      "config.json",
+      "config-editor.html",
+      "offline.html",
+      "titlebar.html",
       "index.html",
       "assets/**/*"
     ],
     "linux": {
-      "target": "AppImage",
+      "target": [
+        {
+          "target": "deb",
+          "arch": ["x64"]
+        }
+      ],
       "icon": "assets/icon.png",
-      "category": "Network"
+      "category": "Network",
+      "desktop": {
+        "Name": "OpenWeb UI",
+        "Comment": "Cliente de escritorio para OpenWeb UI",
+        "GenericName": "OpenWeb UI Desktop",
+        "StartupNotify": true,
+        "StartupWMClass": "openwebui-desktop",
+        "Keywords": "web;chat;ai;",
+        "Icon": "/home/jsuarez/Documents/OpenWebUI_App_escritorio/assets/icon.png"
+      },
+      "executableName": "openwebui-desktop",
+      "synopsis": "Cliente de escritorio para OpenWeb UI",
+      "description": "Aplicación de escritorio para acceder a OpenWeb UI con notificaciones y configuración avanzada.",
+      "extraResources": [
+        {
+          "from": "assets/icon.png",
+          "to": "icon.png"
+        }
+      ]
     },
     "win": {
       "target": "nsis",
